test/types/coerce/noIntToComplexCoercions.good
noIntToComplexCoercions.chpl:5: error: unresolved call 'f(int(64))'
noIntToComplexCoercions.chpl:1: note: this candidate did not match: f(arg: complex)
noIntToComplexCoercions.chpl:5: note: because actual argument #1 with type 'int(64)'
noIntToComplexCoercions.chpl:1: note: is passed to formal 'arg: complex(128)'
