test/types/coerce/noIntToComplexCoercions.chpl
proc f(arg: complex) { }

var x: int;

f(x);
